--- a/app/src/main/res/layout/fragment_first_screen.xml
+++ b/app/src/main/res/layout/fragment_first_screen.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirstScreenFragment">
-    
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-        
-    </com.google.android.material.appbar.AppBarLayout>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".FirstScreenFragment"
+    android:background="@color/almost_black"
+    android:orientation="vertical">
 
-</FrameLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/countdown_card"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/countdown_height"
+        android:layout_marginHorizontal="@dimen/countdown_margin_h"
+        android:layout_marginVertical="@dimen/countdown_margin_v"
+        app:cardCornerRadius="@dimen/countdown_corner">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:background="@drawable/countdown_gradient"
+            >
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
