--- a/app/src/main/res/layout/fragment_first_screen.xml
+++ b/app/src/main/res/layout/fragment_first_screen.xml
@@ -38,6 +38,7 @@
                 android:textSize="@dimen/countdown_title_text_size"/>
 
             <include layout="@layout/countdown_layout"
+                android:id="@+id/countdown_included"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/countdown_title"
