--- a/app/src/main/res/layout/classes_recycle_item.xml
+++ b/app/src/main/res/layout/classes_recycle_item.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/countdown_margin_h"
-    app:cardCornerRadius="@dimen/countdown_corner">
+    app:cardCornerRadius="@dimen/countdown_corner"
+    app:cardElevation="@dimen/zero"
+    android:elevation="@dimen/zero">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -75,6 +77,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/skype_button"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
