--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="gradient_end_dark">#FF232329</color>
     <color name="time_icon_color">#FF4E4F54</color>
     <color name="blue_button">#FF4bcfff</color>
+    <color name="dark_subtitle">#FF495455</color>
 
 
 
