--- a/app/src/main/res/layout/classes_recycle_item.xml
+++ b/app/src/main/res/layout/classes_recycle_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/classes_rv_height"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,30 +7,17 @@
     android:layout_margin="@dimen/countdown_margin_h"
     app:cardCornerRadius="@dimen/countdown_corner"
     app:cardElevation="@dimen/zero"
-    android:elevation="@dimen/zero">
+    android:elevation="@dimen/zero"
+    app:cardBackgroundColor="@color/empty_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/dark_gradient">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/image_cardview"
-            android:layout_width="@dimen/rv_image_size"
-            android:layout_height="@dimen/rv_image_size"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:cardCornerRadius="@dimen/rv_image_corner"
-            android:layout_marginLeft="@dimen/rv_image_margin" >
-            <ImageView
-                android:id="@+id/iv_icon_classes"
-                android:layout_width="@dimen/rv_image_size"
-                android:layout_height="@dimen/rv_image_size"
-                android:background="@color/rv_image_background"
-                android:padding="@dimen/rv_image_padding"
-                />
-        </androidx.cardview.widget.CardView>
+        <include
+            android:id="@+id/classes_rv_class_item"
+            layout="@layout/class_icon_layout" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/text_classes"
@@ -38,7 +25,7 @@
             android:layout_height="@dimen/rv_image_size"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/image_cardview"
+            app:layout_constraintStart_toEndOf="@id/classes_rv_class_item"
             android:layout_marginLeft="@dimen/textcard_margin">
 
             <TextView
@@ -91,4 +78,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
