--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -25,12 +25,16 @@
     <dimen name="classes_rv_height">120dp</dimen>
     <dimen name="rv_image_size">60dp</dimen>
     <dimen name="rv_image_padding">7dp</dimen>
-    <dimen name="rv_image_margin">30dp</dimen>
+    <dimen name="rv_image_margin">20dp</dimen>
     <dimen name="rv_image_corner">25dp</dimen>
     <dimen name="textcard_margin">20dp</dimen>
     <dimen name="textcard_bottom_text_size">12sp</dimen>
     <dimen name="textcard_bottom_text_margin">2sp</dimen>
     <dimen name="textcard_button_text_size">15sp</dimen>
+    <dimen name="classes_number_size">12sp</dimen>
 
+    <!-- Homeworks section -->
+    <dimen name="homework_card_size">300dp</dimen>
+    <dimen name="homework_card_padding">20dp</dimen>
 
 </resources>
