--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="blue_button">#FF4bcfff</color>
     <color name="dark_subtitle">#FF495455</color>
 
+    <color name="little_text">#FFbababf</color>
+
 
 
     <color name="subtitle_gray">#FFb4bdbd</color>
