--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="subtitle_gray">#FFb4bdbd</color>
     <color name="dark_red">#FF5d2a3b</color>
 
+    <color name="pathline_color">#FF1b2c2b</color>
+
     <color name="black">#FF000000</color>
 
     <color name="purple_200">#FFBB86FC</color>
