--- a/app/src/main/res/layout/fragment_second_screen.xml
+++ b/app/src/main/res/layout/fragment_second_screen.xml
@@ -3,12 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.secondscreen.SecondScreenFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.secondscreen.SecondScreenFragment"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/todays_date"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:text="Today" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/second_screen_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
