--- a/app/src/main/res/drawable/circle_on_shape.xml
+++ b/app/src/main/res/drawable/circle_on_shape.xml
@@ -4,7 +4,7 @@
 
     <item>
         <shape
-            android:shape="oval" >
+            android:shape="ring" >
             <gradient
                 android:startColor="@color/gradient_start"
                 android:endColor="@color/gradient_end"
