--- a/app/src/main/res/layout/fragment_second_screen.xml
+++ b/app/src/main/res/layout/fragment_second_screen.xml
@@ -9,9 +9,10 @@
 
     <TextView
         android:id="@+id/todays_date"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:text="Today" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Today"
+        android:textColor="@color/subtitle_gray"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/second_screen_recyclerview"
