--- a/app/src/main/res/layout/timeline_recycle_item.xml
+++ b/app/src/main/res/layout/timeline_recycle_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="@dimen/grid_first_col_width"
@@ -17,6 +18,7 @@
             android:background="@color/almost_black">
 
             <View
+                android:id="@+id/pre_line"
                 android:layout_width="@dimen/line_width"
                 android:layout_height="@dimen/grid_half_height"
                 android:background="@color/pathline_color"
@@ -25,6 +27,7 @@
                 app:layout_constraintBottom_toTopOf="@id/grid_timeline_icon"/>
 
             <View
+                android:id="@+id/post_line"
                 android:layout_width="@dimen/line_width"
                 android:layout_height="@dimen/grid_half_height"
                 android:background="@color/pathline_color"
@@ -42,6 +45,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
+            <ImageView
+                android:id="@+id/grid_timeline_icon_sel"
+                android:layout_width="@dimen/grid_icon_selected_size"
+                android:layout_height="@dimen/grid_icon_selected_size"
+                android:src="@drawable/circle_on_shape"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
@@ -54,6 +69,107 @@
             android:textStyle="bold"
             tools:text="8:00 - 9:00"
             />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:layout_width="@dimen/grid_first_col_width"
+            android:layout_height="match_parent"
+            android:background="@color/almost_black">
+            <View
+                android:id="@+id/post_post_Line"
+                android:layout_width="@dimen/line_width"
+                android:layout_height="match_parent"
+                android:background="@color/pathline_color"
+                android:layout_gravity="center"/>
+        </FrameLayout>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/countdown_margin_h"
+            app:cardCornerRadius="@dimen/countdown_corner"
+            app:cardElevation="@dimen/zero"
+            android:elevation="@dimen/zero"
+            app:cardBackgroundColor="@color/empty_color">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/tl_card_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/dark_gradient"
+                android:paddingBottom="@dimen/textcard_margin">
+
+                <include
+                    android:id="@+id/tl_rv_class_item"
+                    layout="@layout/class_icon_layout" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/tl_text_classes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/rv_image_size"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tl_rv_class_item"
+                    android:layout_marginTop="@dimen/textcard_margin"
+                    android:layout_marginStart="@dimen/textcard_margin">
+
+                    <TextView
+                        android:id="@+id/tl_class_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="@dimen/classes_title_size"
+                        android:textColor="@color/subtitle_gray"
+                        tools:text="Class"
+                        />
+
+                    <TextView
+                        android:id="@+id/tl_class_teacher"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="@dimen/textcard_bottom_text_size"
+                        android:textColor="@color/time_icon_color"
+                        tools:text="Teacher"
+                        android:layout_marginStart="@dimen/textcard_bottom_text_margin"
+                        />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                    android:id="@+id/tl_class_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tl_rv_class_item"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_margin="@dimen/subtitle_margin_h"
+                    android:textSize="@dimen/textcard_bottom_text_size"
+                    android:textColor="@color/time_icon_color"
+                    tools:text="Long long long long long long long long Description"
+                    android:visibility="gone"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/tl_skype_button"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:background="@color/blue_button"
+                android:text="@string/button_skype_text"
+                android:textColor="@color/white"
+                android:textAllCaps="true"
+                android:textSize="@dimen/textcard_button_text_size" />
+
+        </com.google.android.material.card.MaterialCardView>
+
     </LinearLayout>
 
 </LinearLayout>
