--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="dark_red">#FF5d2a3b</color>
 
     <color name="pathline_color">#FF1b2c2b</color>
+    <color name="tablayout_back">#FF24252a</color>
 
     <color name="black">#FF000000</color>
 
