--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,19 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="CustomCardViewStyle" parent="@style/Widget.MaterialComponents.CardView">
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay_card_custom_corners</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay_card_custom_corners" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">@dimen/countdown_corner</item>
+        <item name="cornerSizeTopLeft">@dimen/countdown_corner</item>
+        <item name="cornerSizeBottomRight">@dimen/zero</item>
+        <item name="cornerSizeBottomLeft">@dimen/zero</item>
+    </style>
+
+
 </resources>
 
 
