--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,9 @@
     <color name="pathline_color">#FF1b2c2b</color>
     <color name="tablayout_back">#FF24252a</color>
 
+    <color name="bot_button_color">#FFdbdce1</color>
+    <color name="bot_button_color_selected">#FF3db08b</color>
+
     <color name="black">#FF000000</color>
 
     <color name="purple_200">#FFBB86FC</color>
